fixed iOS normal-header too much top margin

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -130,7 +130,6 @@ Label, Button, Span {
 }
 
 .menu {
-  background-color: transparent;
   background-image: url("~/app/assets/images/menu.png");
   background-repeat: no-repeat;
   background-position: left;
