--- a/src/app.ios.scss
+++ b/src/app.ios.scss
@@ -13,3 +13,7 @@
   background-image: none;
   background-color: #fafafa;
 }
+#header {
+  height: 50pt;
+  padding-top: 0;
+}
